[package]
name = "prizeprofile-scheduler"
version = "1.0.8"
authors = ["Michael Bausano <michael@joinpouch.com>"]

[dependencies]
mysql = "*"
dotenv = "0.12.0"
futures = "0.1.17"
serde_json = "1.0"
serde_derive = "1.0.78"
rusoto_core = "0.32.0"
rusoto_sqs = "0.32.0"
rusoto_sns = "0.32.0"
rusoto_s3 = "0.32.0"
